crates/wac-parser/tests/resolution/fail/mismatched-func-param-type.wac
package test:comp;

import x: interface {
    resource r;
    f: func(r: string);
};

let i = new foo:bar { x };
